# gv2fsm

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
examples/: .gitignore  main.cpp  sm.dot
src/: dot_parser.cpp  dot_parser.hpp  fsm.cpp  fsm.hpp  generator.cpp  generator.hpp  main.cpp  version.hpp.in
test/: test_main.cpp
